--- a/public/index.html
+++ b/public/index.html
@@ -53,9 +53,9 @@
 </head>
 <body>
 	<div id="step1" class="step">
-		<p>Please provide the event definition key of the journey's entry event:</p>
-		<p class="inputLabel">Event Definition Key</p>
-		<input id="select-entryevent-defkey" placeholder="journey entry event's event definition key" type="text" required="required" minlength="1">
+		<p>Please click done to configure the custom split!</p>
+		<p class="inputLabel">Note: this split shall only work for the DE - sid_test_2.</p>
+		<p>For any other DE, change DE name in config.json.</p>
 	</div>
 </body>
 </html>
