--- a/public/index.html
+++ b/public/index.html
@@ -55,6 +55,7 @@
 	<div id="step1" class="step">
 		<p>Please click done to configure the custom split!</p>
 		<p class="inputLabel">Note: this split shall only work for the DE - sid_test_02.</p>
+		<p>HAHAHAHAHAHAHAHAHAHAHAHAHAHAHAHA</p>
 		<p>For any other DE, change DE name in config.json.</p>
 	</div>
 </body>
