--- a/public/index.html
+++ b/public/index.html
@@ -56,6 +56,10 @@
 		<p>Please click done to configure the custom split!</p>
 		<p class="inputLabel">Note: this split shall only work for the DE - sid_test_02.</p>
 		<p>For any other DE, change DE name in config.json.</p>
+		<br><br>
+		<p>Please choose whether you have to check if the customer <i>"is Registered"</i> or <i>"has Ordered a sample"</i></p>
+		<input id="reg" type="radio" name="Registration" value="R"> Registration<br>
+  		<input id="ord" type="radio" name="Order" value="O"> Order Confirmation<br>
 	</div>
 </body>
 </html>
