--- a/public/index.html
+++ b/public/index.html
@@ -58,8 +58,10 @@
 		<p>For any other DE, change DE name in config.json.</p>
 		<br><br>
 		<p>Please choose whether you have to check if the customer <i>"is Registered"</i> or <i>"has Ordered a sample"</i></p>
-		<input id="reg" type="radio" name="Registration" value="R"> Registration<br>
-  		<input id="ord" type="radio" name="Order" value="O"> Order Confirmation<br>
+		<form id="option">
+		<input type="radio" name="Registration" value="R"> Registration<br>
+  		<input type="radio" name="Order" value="O"> Order Confirmation<br>
+		</form>
 	</div>
 </body>
 </html>
