--- a/public/index.html
+++ b/public/index.html
@@ -59,8 +59,8 @@
 		<br><br>
 		<p>Please choose whether you have to check if the customer <i>"is Registered"</i> or <i>"has Ordered a sample"</i></p>
 		<form id="option">
-		<input type="radio" name="Registration" value="R"> Registration<br>
-  		<input type="radio" name="Order" value="O"> Order Confirmation<br>
+		<input type="radio" name="option" value="R"> Registration<br>
+  		<input type="radio" name="option" value="O"> Order Confirmation<br>
 		</form>
 	</div>
 </body>
