--- a/public/index.html
+++ b/public/index.html
@@ -57,11 +57,15 @@
 		<p class="inputLabel">Note: this split shall only work for the DE - sid_test_02.</p>
 		<p>For any other DE, change DE name in config.json.</p>
 		<br><br>
-		<p>Please choose whether you have to check if the customer <i>"is Registered"</i> or <i>"has Ordered a sample"</i></p>
-		<form id="option">
-		<input type="radio" name="option" value="R"> Registration<br>
-  		<input type="radio" name="option" value="O"> Order Confirmation<br>
-		</form>
+		<p>Please choose whether you have to check if the customer
+			<ul>
+				<li><i>"is Registered (R)"</i></li>
+				<li><i>"has Ordered a sample (O)"</i></li>
+			</ul>
+		</p>
+
+		<input id="option" placeholder="type 'R' or 'O'" type="text" required="required" minlength="1">
+
 	</div>
 </body>
 </html>
